# GitoKu

./: CMakeLists.txt
cmake_modules/: FindlibGit2.cmake
data/: gitoku.ui
src/: CFileStatusFilterModel.cpp  CFileStatusFilterModel.h  CGitRepo.cpp  CGitRepo.h  CGitokuWindow.cpp  CGitokuWindow.h  CLegacyGitVCS.cpp  CLegacyGitVCS.h  CMakeLists.txt  CVCS.cpp  CVCS.h  gitoku.cpp  log.h  log.hpp
